objects/Case_Comment__c.object
<CustomObject>
    <fields>
        <fullName>BMX_User__c</fullName>
        <label>User</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Case Comments</relationshipLabel>
        <relationshipName>Case_Comment</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>CommentBody__c</fullName>
        <label>CommentBody</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ComplaintId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>Case Comments</relationshipLabel>
        <relationshipName>Case_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Case Comment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>